--- a/_html_site/index.html
+++ b/_html_site/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Park INDEX</title>
+    <title>Theme Park Home Page</title>
+    <meta name="author" content="Team 89">
+    <meta name="description" content="Team 89 Theme Park Home Page">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <!-- First Navigation -->
+    <!-- Primary Navigation -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-            <img src="/images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="../images/logo.png" alt="Theme Park Logo" width="30" height="24" class="d-inline-block align-text-top">
             Logo
             </a>
             <form class="d-flex">
@@ -28,7 +30,7 @@
             </form>
         </div>
     </nav>
-    <!-- Second Navigation -->
+    <!-- Secondary Navigation -->
     <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" href="#">Tickets</a>
@@ -43,7 +45,7 @@
           <a class="nav-link" href="#">Support</a>
         </li>
     </ul>
-    <!-- Hero Carousel -->
+    <!-- Hero Carousel Slider -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -52,14 +54,16 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="../images/hero1.png" alt="First slide">
+                <img class="d-block w-100" src="../images/hero1.png" alt="First slider">
                 <div class="carousel-caption d-none d-md-block">
+                    <h1 class="h-s2">Welcome to Theme Park</h1>
                     <button type="button" class="btn btn-primary border-radius-lg">Buy Tickets</button>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../images/hero2.png" alt="Second slide">
+                <img class="d-block w-100" src="../images/hero2.png" alt="Second slider">
                 <div class="carousel-caption d-none d-md-block">
+                    <h1 style="color:#0000ff;background-color: rgba(255, 255, 255, 0.4);">We hope you enjoy our park</h1>
                     <button type="button" class="btn btn-primary">Buy Tickets</button>
                 </div>
             </div>
@@ -71,12 +75,12 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
         </a>
     </div>
-    <!-- Section 1 -->
+    <!-- Section 1 - General Park Information -->
     <div class="container">
         <div class="grid">
             <div class="section1">
                 <img 
-                src="../images/section1.png" alt="image">
+                src="../images/section1.png" alt="General Park Information Section Image">
             </div>
             <div class="text1">
                 <h2>General information about the park</h2>
@@ -84,21 +88,21 @@
             </div>
         </div>
     </div>
-    <!-- Section 2 -->
+    <!-- Section 2 - Main Attraction -->
     <div class="section2">
-        <img src="../images/main_attraction.png" class="img-fluid" alt="main-attraction" id="main-attraction">
+        <img src="../images/main_attraction.png" class="img-fluid" alt="Theme Park Main Attraction Image" id="main-attraction">
         <div class="s2-text">
             <h1 class="h-s2">Main Attraction Details</h1>
             <h3 class="h-s2">Attraction Title Text</h3>
             <h4 class="h-s2">Text Area For Description</h4>
         </div>
     </div>
-    <!-- Section 3 -->
+    <!-- Section 3 - Things to do at the Park -->
     <div class="container">
         <div class="grid">
             <div class="section3">
                 <img 
-                src="../images/section3.png" alt="image">
+                src="../images/section3.png" alt="Things to do at the park section image">
             </div>
             <div class="text3">
                 <h2>Things To Do At The Park</h2>
@@ -117,7 +121,7 @@
                         <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                             <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
                             <p>Don’t miss the latest safety updates.</p>
-                            <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                            <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate>
                                 <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
                                 <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
                                 <p class="mchimp-errmessage" style="display: none;"></p>
@@ -146,7 +150,7 @@
                         <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
                             <h3 class="f-title f_600 t_color f_size_18">Rules</h3>
                             <ul class="list-unstyled f_list">
-                                <li><a href="#">Park Rules & Regulations</a></li>
+                                <li><a href="#">Park Rules &amp; Regulations</a></li>
                             </ul>
                         </div>
                     </div>
@@ -157,15 +161,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-sm-7">
-                        <p class="mb-0 f_400">©Park License</p>
+                        <p class="mb-0 f_400">&copy; Park License</p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Javascript Includes -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
