--- a/_html_site/page_2.html
+++ b/_html_site/page_2.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Park INDEX</title>
+    <title>Theme Park - Ticket Purchase Page</title>
+    <meta name="author" content="Team 89">
+    <meta name="description" content="Team 89 Theme Park Ticket Information and Purchase Page">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <!-- First Navigation -->
+    <!-- Primary Navigation -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-            <img src="/images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="../images/logo.png" alt="Theme Park Logo" width="30" height="24" class="d-inline-block align-text-top">
             Logo
             </a>
             <form class="d-flex">
@@ -31,7 +33,7 @@
             </form>
         </div>
     </nav>
-    <!-- Second Navigation -->
+    <!-- Secondary Navigation -->
     <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" href="#">Tickets</a>
@@ -49,8 +51,8 @@
     <!-- Tickets -->
     <div>
         <div class="tickets-text">    
-            <h3>Park Online Ticket Sales + Ticket Pricing</h1>
-            <h4>1. Select Your Type of Tickets</h3>
+            <h3>Park Online Ticket Sales & Ticket Pricing</h3>
+            <h4>1. Select Your Type of Tickets</h4>
         </div>
         <!-- 4 ticket cards -->
         <div class="flexcontainer">
@@ -75,7 +77,7 @@
        <!-- Calendar -->
     <div class="calendar">
         <div class="tickets-text">    
-            <h4>2. Choose A Date Of Visit</h3>
+            <h4>2. Choose A Date Of Visit</h4>
         </div>
         <section class="ftco-section">
             <div class="container">
@@ -175,10 +177,8 @@
         <form class="stripe-form" action="//httpbin.org/post" method="POST">
           <input type="hidden" name="token" />
           <div class="group">
-            <label>
               <span>Card</span>
               <div id="card-element" class="field"></div>
-            </label>
           </div>
           <div class="group">
             <label>
@@ -214,11 +214,11 @@
             <label>
               <span>Country</span>
               <select name="address_country" id="address-country" class="field">
-                <option value="IN">US</option>
-                <option value="SG" selected>UK</option>
-                <option value="SG" selected>Portugal</option>
-                <option value="SG" selected>Netherlands</option>
-                <option value="SG" selected>South Korea</option>
+                <option value="US" selected>US</option>
+                <option value="UK">UK</option>
+                <option value="PT">Portugal</option>
+                <option value="NL">Netherlands</option>
+                <option value="SK">South Korea</option>
               </select>
             </label>
           </div>
@@ -240,7 +240,7 @@
                     <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                         <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
                         <p>Don’t miss the latest safety updates.</p>
-                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate>
                             <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
                             <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
                             <p class="mchimp-errmessage" style="display: none;"></p>
@@ -280,7 +280,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-7">
-                    <p class="mb-0 f_400">©Park License</p>
+                    <p class="mb-0 f_400">&copy; Park License</p>
                 </div>
             </div>
         </div>
@@ -292,6 +292,6 @@
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="../script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
