--- a/_html_site/page_3.html
+++ b/_html_site/page_3.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='author' content='Joep van Dormolen'>
+    <meta name="description" content="Team 89 Theme Park Information Page">
     <meta name='robots' content='none'>
     <title>Theme Park PAGE 3: Park Information</title>
     <link href="../css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- Ternary Page Layout -->
 
     <!-- Header Navigation-->
     <!-- Note: Header Nav is full width -->
-    <!-- First Navigation -->
+    <!-- Primary Navigation -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-            <img src="/images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="../images/logo.png" alt="Theme Park Logo" width="30" height="24" class="d-inline-block align-text-top">
             Logo
             </a>
             <form class="d-flex">
@@ -32,7 +33,7 @@
             </form>
         </div>
     </nav>
-    <!-- Second Navigation -->
+    <!-- Secondary Navigation -->
     <ul class="nav justify-content-center" id="nav-blue">
         <li class="nav-item">
           <a class="nav-link active" href="#">Tickets</a>
@@ -54,7 +55,7 @@
         <div class="section hero map" style="border-top: double; background-color: #eee">
             <div class="slider_overlay">
                 <!-- Image of the map of the park-->
-                <img src='../images/map_theme_park.png' alt='A Map Of The Park' width='100%'> 
+                <img src='../images/map_theme_park.png' alt='A Map Of The Park' style="max-width: 100%"> 
              </div>
         </div>
     </div>
@@ -110,7 +111,7 @@
     <!-- Downloadable/Viewable Park Map extends the full width of the page -->
     <!-- Currently nothing happens when you click the button-->
     <div class="container"> <!-- 100% width, double border at top -->
-        <div class="download_map_button style="border-top: double; background-color: #eee; height:500px;">
+        <div class="download_map_button" style="border-top:double;background-color:#eee;height:500px;">
             <button type="button" class="u-full-width">Download Park Map</button>
         </div>
     </div>
@@ -118,7 +119,7 @@
     <!-- Element that holds directions to the park and a document with safety compliance -->
     <div class='container'>
         <div class='one-third column'>
-            <img src='../images/covid-19_safety_measures.png' alt='Picture of COVID-19 safety measures' height='235px' width='313px'>
+            <img src='../images/covid-19_safety_measures.png' alt='Picture of COVID-19 safety measures' height='235' width='313'>
             <br>
             <span>Corona virus safety measures</span>
             <p>Read up on the measures we have taken to make your visit as safe and enjoyable as possible.</p>
@@ -126,14 +127,14 @@
         </div>
         
         <div class='one-third column'>
-            <img src='../images/theme_park.png' alt='Picture of the park' height='235px' width='313px'>
+            <img src='../images/theme_park.png' alt='Picture of the park' height='235' width='313'>
             <br>
             <span>Directions to the park</span>
             <p>Coming from the train station? By car? Or plane? We have got you covered. Below you will find the directions to our park.</p>
             <button type='button'>Download the route guide to the park</button>
         </div>
         <div class='one-third column'>
-                <img src='../images/ticket_booking.png' alt='Picture of the bungalow park' height='235px' width='313px'>
+                <img src='../images/ticket_booking.png' alt='Picture of the bungalow park' height='235' width='313'>
                 <br>
                 <span>Book your ticket now and stay overnight</span>
                 <p>Come for an enchanting stay in ome of our family friendly accomodations and get even more out of your visit.</p>
@@ -154,7 +155,7 @@
                     <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                         <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
                         <p>Don’t miss the latest safety updates.</p>
-                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate>
                             <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
                             <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
                             <p class="mchimp-errmessage" style="display: none;"></p>
@@ -194,7 +195,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-7">
-                    <p class="mb-0 f_400">©Park License</p>
+                    <p class="mb-0 f_400">&copy; Park License</p>
                 </div>
             </div>
         </div>
