--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Park LOADER</title>
+    <title>Theme Park Index Page</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <h1>Wireframe Pages</h1>
-<a href="_wireframe/page1.png">Load WireFrame Index Page</a><br />
-<a href="_wireframe/page2.png">Load WireFrame Page 2</a><br />
-<a href="_wireframe/page3.png">Load WireFrame Page 3</a><br />
+<a href="_wireframe/page1.png">Load WireFrame Image - Theme Park Home Page</a> | <a href="_wireframe/index.html">Load WireFrame HTML - Theme Park Home Page</a><br />
+<a href="_wireframe/page2.png">Load WireFrame Image - Theme Park Ticket Page</a><br />
+<a href="_wireframe/page3.png">Load WireFrame Image - Theme Park Map Page</a><br />
 
 <h1>HTML Site Pages</h1>
-<a href="_html_site/index.html">Load HTML Index Page</a><br/>
-<a href="_html_site/page_2.html">Load HTML Page 2</a><br/>
-<a href="_html_site/page_3.html">Load HTML Page 3</a><br/>
+<a href="_html_site/index.html">Load HTML - Theme Park Home Page</a><br/>
+<a href="_html_site/page_2.html">Load HTML - Theme Park Ticket Page</a><br/>
+<a href="_html_site/page_3.html">Load HTML - Theme Park Map Page</a><br/>
 </body>
 
 
